Added user-bookings integration
